force-app/main/default/objects/Column_component_account_connector__mdt/Column_component_account_connector__mdt.object-meta.xml
<CustomObject>
    <label>Column component account connector</label>
    <pluralLabel>Column component account connectors</pluralLabel>
</CustomObject>