force-app/main/default/objects/Column_component_account_connector__mdt/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>