force-app/main/default/objects/Column_component_account_connector__mdt/fields/Cell_attributes__c.field-meta.xml
<CustomField>
    <fullName>Cell_attributes__c</fullName>
    <label>Cell attributes</label>
    <referenceTo>Cell_attributes__mdt</referenceTo>
    <relationshipLabel>Column component account connectors</relationshipLabel>
    <relationshipName>Column_component_account_connectors</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>