force-app/main/default/objects/Column_component_account_connector__mdt/fields/Column_label__c.field-meta.xml
<CustomField>
    <fullName>Column_label__c</fullName>
    <description>Either a label OR the api name of a custom label</description>
    <label>Column label</label>
    <length>180</length>
    <type>Text</type>
</CustomField>