force-app/main/default/objects/Column_component_account_connector__mdt/fields/Column_settings__c.field-meta.xml
<CustomField>
    <fullName>Column_settings__c</fullName>
    <label>Column settings</label>
    <referenceTo>Column_settings__mdt</referenceTo>
    <relationshipLabel>Column component account connectors</relationshipLabel>
    <relationshipName>Column_component_account_connectors</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>