force-app/main/default/objects/Column_component_account_connector__mdt/fields/Filter_settings__c.field-meta.xml
<CustomField>
    <fullName>Filter_settings__c</fullName>
    <description>Used when you want to filter based on something other than specified api field (for related records for example). Leave empty if you want to just filter on value provided.</description>
    <inlineHelpText>Used when you want to filter based on something other than specified api field (for related records for example). Leave empty if you want to just filter on value provided.</inlineHelpText>
    <label>Filter settings</label>
    <referenceTo>Filter_settings__mdt</referenceTo>
    <relationshipLabel>Column component account connectors</relationshipLabel>
    <relationshipName>Column_component_account_connectors</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>