force-app/main/default/objects/Column_component_account_connector__mdt/fields/Filterable__c.field-meta.xml
<CustomField>
    <fullName>Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>