force-app/main/default/objects/Column_component_account_connector__mdt/fields/Hiring_desk_review_comments__c.field-meta.xml
<CustomField>
    <fullName>Hiring_desk_review_comments__c</fullName>
    <description>DEVOPS</description>
    <label>Hiring desk review comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>