force-app/main/default/objects/Column_component_account_connector__mdt/fields/Hiring_desk_review_vendor_column__c.field-meta.xml
<CustomField>
    <fullName>Hiring_desk_review_vendor_column__c</fullName>
    <label>Hiring desk review vendor column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>