force-app/main/default/objects/Column_component_account_connector__mdt/fields/Linked_document_column__c.field-meta.xml
<CustomField>
    <fullName>Linked_document_column__c</fullName>
    <label>Linked document column</label>
    <referenceTo>Linked_document_column__mdt</referenceTo>
    <relationshipLabel>Column component account connectors</relationshipLabel>
    <relationshipName>Column_component_account_connectors</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>