force-app/main/default/objects/Column_component_account_connector__mdt/fields/Workcomponent_general_settings__c.field-meta.xml
<CustomField>
    <fullName>Workcomponent_general_settings__c</fullName>
    <label>Workcomponent general settings</label>
    <referenceTo>Workcomponent_general_settings__mdt</referenceTo>
    <relationshipLabel>Column component account connectors</relationshipLabel>
    <relationshipName>Column_component_account_connectors</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>